# zkreceipt

./: .gitignore  Cargo.toml  LICENSE  README.md  light-client.md  prover.md  security.md  verifier.md
light-client/: Cargo.toml  README.md
light-client/src/: lib.rs
mpt-verify/: Cargo.toml
mpt-verify/src/: lib.rs
mpt-verify/tests/: real_tempo_fixture.rs
mpt-verify/tests/fixtures/: tempo_moderato_alphausd.json
prover/: Cargo.toml  README.md
prover/program/: Cargo.toml  README.md
prover/program/src/: light_client.rs
prover/src/: lib.rs
solana/: .gitignore  Anchor.toml  Cargo.toml  README.md
solana/programs/zkreceipt-verifier/: Cargo.toml
solana/programs/zkreceipt-verifier/src/: lib.rs
solana/programs/zktempo-verifier/: Cargo.toml
solana/programs/zktempo-verifier/src/: lib.rs
spec/: composition.md  light-client.md  prover.md  security.md  tempo-chainspec.md  verifier.md
x402-receiver/: Cargo.toml
x402-receiver/src/: anchor.rs  lib.rs
