[workspace]
resolver = "2"
members = [
    "light-client",
    "prover",
]
# `prover/program/` (SP1 guest crate) will be added when the SP1 toolchain
# version is pinned at M1.
# `solana/` will be a nested Anchor workspace and excluded from this one.

[workspace.package]
version = "0.1.0-rfc.1"
edition = "2021"
license = "Apache-2.0"
authors = ["psyto <saito.hiroyuki@gmail.com>"]
repository = "https://github.com/mppsol/zktempo"
rust-version = "1.75"

[workspace.dependencies]
# Pinned versions for crates shared across workspace members.
# Populated as crates are added.

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
