[workspace]
resolver = "2"
members = [
    "light-client",
    "prover",
    "mpt-verify",
    "x402-receiver",
]
exclude = [
    # Nested Anchor workspace (uses its own toolchain + solana-program version locks).
    # Build via `cd solana && anchor build`, not via the outer cargo.
    "solana",
    # SP1 zkVM guest crate. Built via `cargo prove build` with the Succinct
    # rustc toolchain, not via the outer cargo build. See prover/program/README.md.
    "prover/program",
]

[workspace.package]
version = "0.1.0-rfc.1"
edition = "2021"
license = "Apache-2.0"
authors = ["psyto <saito.hiroyuki@gmail.com>"]
repository = "https://github.com/mppsol/zktempo"
rust-version = "1.75"

[workspace.dependencies]
# Pinned versions for crates shared across workspace members.
# Populated as crates are added.

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
