[package]
name = "zktempo-light-client"
description = "Simplex BFT finality verification for Tempo. no_std-compatible for SP1 zkVM guest use."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[features]
default = ["std"]
std = []

[dependencies]
# serde is used to ferry types through SP1's guest↔host boundary
# (ciborium / CBOR on the guest side). `alloc` feature lets us derive on
# types containing Vec without pulling std.
serde = { version = "1.0", default-features = false, features = ["derive", "alloc"] }

# Future additions expected: a no_std-compatible signature crate
# (ed25519-dalek or blst), sha2, borsh for Solana-side outputs.

[dev-dependencies]
# Used in tests to verify ProofInputs round-trips through the same CBOR
# encoding the SP1 guest uses. Production CBOR use lives in prover/program/.
ciborium = "0.2"
