[package]
name = "zktempo-light-client"
description = "Simplex BFT finality verification for Tempo. no_std-compatible for SP1 zkVM guest use."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[features]
default = ["std"]
std = []

[dependencies]
# serde is used to ferry types through SP1's guest↔host boundary
# (ciborium / CBOR on the guest side). `alloc` feature lets us derive on
# types containing Vec without pulling std.
serde = { version = "1.0", default-features = false, features = ["derive", "alloc"] }
# serde's blanket impl only covers `[T; 0]..[T; 32]`; we need `[u8; 64]`
# for Ed25519 signatures. serde-big-array adds derive support up to 64.
serde-big-array = { version = "0.5", default-features = false }

# Ed25519 signature verification for Tempo validators. The 32-byte
# proposer pubkeys observed on Moderato (spec/tempo-chainspec.md §3.1)
# match Ed25519 exactly. Verify-only — no signing on this path.
ed25519-dalek = { version = "2", default-features = false }

# SHA-256 for validator-set hash commitments.
sha2 = { version = "0.10", default-features = false }

[dev-dependencies]
# Used in tests to verify ProofInputs round-trips through the same CBOR
# encoding the SP1 guest uses. Production CBOR use lives in prover/program/.
ciborium = "0.2"
