[package]
name = "zktempo-light-client"
description = "Simplex BFT finality verification for Tempo. no_std-compatible for SP1 zkVM guest use."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[features]
default = ["std", "verify"]
# Enables `std` linking. Disable for SP1 guest / BPF Solana program use.
std = []
# Enables the Simplex BFT verification path (verify_update, CertificateHeader,
# Update, etc.). Pulls in ed25519-dalek + sha2 + serde-big-array.
# Disable on consumers that need only the public-output codec
# (e.g. the Solana verifier program which decodes the 112-byte committed
# output but does not re-run consensus verification).
verify = ["dep:ed25519-dalek", "dep:sha2", "dep:serde-big-array"]

[dependencies]
# Always-on. Used for the public-output codec types and the verify-gated
# consensus types alike. `alloc` lets us derive on Vec-bearing structs.
serde = { version = "1.0", default-features = false, features = ["derive", "alloc"] }

# Verify-only deps. Ed25519 signatures, SHA-256 over validator sets,
# serde-big-array workaround for `[u8; 64]` (serde's blanket derive caps
# at 32 elements).
ed25519-dalek = { version = "2", default-features = false, optional = true }
sha2 = { version = "0.10", default-features = false, optional = true }
serde-big-array = { version = "0.5", default-features = false, optional = true }

[dev-dependencies]
# Used in tests to verify ProofInputs round-trips through the same CBOR
# encoding the SP1 guest uses.
ciborium = "0.2"
