[package]
name = "zkreceipt-mpt-verify"
description = "MPT inclusion verification for Ethereum-style (Reth/EVM) state roots. Lets an x402 receiver confirm a payment landed on the source chain by verifying an EIP-1186 account+storage proof against a zkReceipt-anchored state_root — no facilitator. Source-agnostic."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[features]
# Expose the trie-building / payment-fixture helpers to downstream test code
# (e.g. the x402-receiver crate's tests).
testkit = []
# Derive serde on the wire-facing types (TrieAccount) for the receiver's proof
# envelope.
serde = ["dep:serde", "alloy-primitives/serde"]

[dependencies]
# Off-chain receiver-side crate (not BPF / not the SP1 guest), so std is fine.
# `rlp` feature gives Encodable/Decodable impls for U256/B256/Address.
alloy-primitives = { version = "1.0", features = ["rlp"] }
alloy-rlp = { version = "0.3", features = ["derive"] }
# MPT proof verification + trie building (HashBuilder/ProofRetainer used in tests).
alloy-trie = "0.9"
serde = { version = "1", features = ["derive"], optional = true }

[dev-dependencies]
# Parse the real Tempo Moderato eth_getProof fixture in tests/.
serde_json = "1"
