[package]
name = "zkreceipt-verifier"
description = "Solana Anchor program: verifies zkReceipt Groth16 proofs of source-chain finality via alt_bn128 syscalls, anchoring the state_root on Solana."
version = "0.1.0-rfc.1"
edition = "2021"
license = "Apache-2.0"
authors = ["psyto <saito.hiroyuki@gmail.com>"]
repository = "https://github.com/psyto/zkreceipt"

[lib]
crate-type = ["cdylib", "lib"]
name = "zkreceipt_verifier"

[features]
default = []
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.32.1"
# Codec-only import: `default-features = false` skips both `std` and
# `verify`, so we don't drag Ed25519/curve25519-dalek into BPF. We only
# need ProofOutputs + decode_public_output to parse the 112-byte
# committed output from the SP1 proof.
zkreceipt-light-client = { path = "../../../light-client", default-features = false }
